--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -1457,6 +1457,8 @@ items:
             href: api/ediscovery-case-get.md
           - name: Update
             href: api/ediscovery-case-update.md
+          - name: Close
+            href: api/ediscovery-case-close.md
           - name: Delete
             href: api/ediscovery-case-delete.md
         - name: Custodian
