--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -1459,6 +1459,8 @@ items:
             href: api/ediscovery-case-update.md
           - name: Close
             href: api/ediscovery-case-close.md
+          - name: Reopen
+            href: api/ediscovery-case-reopen.md
           - name: Delete
             href: api/ediscovery-case-delete.md
         - name: Custodian
@@ -1521,6 +1523,8 @@ items:
             href: api/ediscovery-sourcecollection-post-additionalsources.md
           - name: Estimate statistics
             href: api/ediscovery-sourcecollection-estimatestatistics.md
+          - name: Add to review set
+            href: api/ediscovery-addtoreviewsetoperation.md
           - name: List add to review set operations
             href: api/ediscovery-sourcecollection-list-addtoreviewsetoperation.md
           - name: List last estimate operation
