--- a/api-reference/v1.0/toc.yml
+++ b/api-reference/v1.0/toc.yml
@@ -771,11 +771,11 @@ items:
         - name: Application template
           href: resources/applicationtemplate.md
           items:
-          - name: List application templates
+          - name: List
             href: api/applicationtemplate-list.md
-          - name: Get application template
+          - name: Get
             href: api/applicationtemplate-get.md
-          - name: Instantiate application template
+          - name: Instantiate
             href: api/applicationtemplate-instantiate.md
       - name: Service principal
         href: resources/serviceprincipal.md
