Auto-expand parent "Devices and apps" limited time

--- a/api-reference/v1.0/toc.yml
+++ b/api-reference/v1.0/toc.yml
@@ -1254,6 +1254,7 @@ items:
           - name: Delete a history item
             href: api/projectrome-delete-historyitem.md
     - name: Devices and apps
+      expanded: true
       items:
       - name: Cloud printing
         items:
