--- a/concepts/toc.yml
+++ b/concepts/toc.yml
@@ -182,6 +182,7 @@ items:
           - name: Tips
             href: data-connect-tips.md
       - name: Devices and apps
+        expanded: true
         items:
           - name: Cloud printing
             items:
