--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -11167,7 +11167,7 @@ items:
               href: api/approval-get.md
             - name: List steps
               href: api/approval-list-steps.md
-            - name: approval-get-steps
+            - name: Get steps
               href: api/approval-get-steps.md
             - name: approval-patch
               href: api/approval-patch.md
