--- a/api-reference/v1.0/toc.yml
+++ b/api-reference/v1.0/toc.yml
@@ -1149,9 +1149,10 @@ items:
       items:
       - name: Overview
         href: resources/communications-api-overview.md
-      - name: Call
-        href: resources/call.md
+      - name: Calls
         items:
+        - name: Call
+          href: resources/call.md
         - name: Create
           href: api/application-post-calls.md
         - name: Get
@@ -1218,9 +1219,10 @@ items:
             href: resources/callrecords-session.md
           - name: List sessions
             href: api/callrecords-session-list.md
-      - name: Online meeting
-        href: resources/onlinemeeting.md
+      - name: Online meetings
         items:
+        - name: Online meeting
+          href: resources/onlinemeeting.md
         - name: Create
           href: api/application-post-onlinemeetings.md
         - name: Get
