--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -11171,14 +11171,12 @@ items:
             items:
             - name: Get
               href: api/approval-get.md
-            - name: List steps
-              href: api/approval-list-steps.md
+            - name: Update
+              href: api/approval-update.md
             - name: Get steps
               href: api/approval-get-steps.md
-            - name: approval-update
-              href: api/approval-update.md
-          - name: Approval step
-            href: resources/approvalstep.md
+            - name: List steps
+              href: api/approval-list-steps.md
           - name: Entitlement management settings
             href: resources/entitlementmanagementsettings.md
             items:
