--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -10949,7 +10949,7 @@ items:
               href: api/identityapiconnector-delete.md
       - name: Governance
         items:
-        - name: Access reviews for groups
+        - name: Access reviews
           href: resources/accessreviewsv2-root.md
           items:
           - name: Access review schedule definition
@@ -10982,11 +10982,15 @@ items:
               href: api/accessreviewinstance-acceptrecommendations.md
             - name: Apply decisions
               href: api/accessreviewinstance-applydecisions.md
+            - name: Batch record decisions
+              href: api/accessreviewinstance-batchrecorddecisions.md
           - name: Access review instance decision item
             href: resources/accessreviewinstancedecisionitem.md
             items:
             - name: List
               href: api/accessreviewinstancedecisionitem-list.md
+            - name: Get
+              href: api/accessreviewinstancedecisionitem-get.md
             - name: List pending approval
               href: api/accessreviewinstancedecisionitem-listpendingapproval.md
             - name: Update
