--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -11171,12 +11171,12 @@ items:
             items:
             - name: Get
               href: api/approval-get.md
-            - name: Update approval step
-              href: api/approvalstep-update.md
-            - name: Get approval step
-              href: api/approval-get-steps.md
             - name: List approval steps
               href: api/approval-list-steps.md
+            - name: Get approval step
+              href: api/approvalstep-get.md
+            - name: Update approval step
+              href: api/approvalstep-update.md
           - name: Entitlement management settings
             href: resources/entitlementmanagementsettings.md
             items:
