--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -11171,6 +11171,9 @@ items:
             items:
             - name: Get
               href: api/approval-get.md
+          - name: Approval step
+            href: resources/approvalstep.md
+            items:
             - name: List approval steps
               href: api/approval-list-steps.md
             - name: Get approval step
