--- a/api-reference/v1.0/toc.yml
+++ b/api-reference/v1.0/toc.yml
@@ -247,13 +247,6 @@ items:
           href: api/user-list-events.md
         - name: Reminder view
           href: api/user-reminderview.md
-      - name: Chats
-        href: /resources/chat.md
-        items:
-        - name: Get chat
-          href: api/chat-get.md
-        - name: List chats
-          href: api/chat-list.md
       - name: Contacts
         href: resources/contact.md
         items:
@@ -436,6 +429,10 @@ items:
           href: api/userteamwork-delete-installedapps.md
         - name: Get chat between user and app
           href: api/userscopeteamsappinstallation-get-chat.md 
+        - name: Get chat for user
+          href: api/chat-get.md
+        - name: List chats for user
+          href: api/chat-list.md
       - name: To-do tasks
         items:
         - name: Task
